# pdf-optimizer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pdf_compressor.py  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
docs/: cli.md  development.md  user-guide.md
tests/: conftest.py  test_compressor.py
