[tool.poetry]
name = "pdf-optimizer"
version = "0.1.0"
description = "Smart PDF compression (structural + raster) via CLI and Streamlit UI, built with PyMuPDF."
authors = ["Juan Lara <larajuand@outlook.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "pdf_compressor.py"}]

[tool.poetry.scripts]
pdf-optimizer = "pdf_compressor:main"

[tool.poetry.dependencies]
python = ">=3.9,!=3.9.7"
PyMuPDF = "^1.23.0"
tqdm = "^4.65.0"
streamlit = "^1.28.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
flake8 = "^6.0.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]